--- a/CoJezdzi/CoJezdzi/Base.lproj/Main.storyboard
+++ b/CoJezdzi/CoJezdzi/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UPP-Ft-hI7">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FWe-Os-Vwg" userLabel="mapView">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1UI-hL-SXh">
                                 <rect key="frame" x="323" y="575" width="42" height="42"/>
@@ -48,7 +48,9 @@ http://api.um.warszawa.pl</string>
                                 <rect key="frame" x="323" y="521" width="42" height="42"/>
                                 <state key="normal" backgroundImage="UserSettings"/>
                                 <connections>
-                                    <action selector="userDidTapSettingsButton" destination="UPP-Ft-hI7" eventType="touchUpInside" id="bqy-d9-ea8"/>
+                                    <segue destination="0dN-YF-zbQ" kind="popoverPresentation" identifier="ShowSettings" popoverAnchorView="mXk-At-R5Q" id="Lbp-Vv-Qfd">
+                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                    </segue>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iob-TS-gtL" userLabel="RefresMapData">
@@ -61,21 +63,21 @@ http://api.um.warszawa.pl</string>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="FWe-Os-Vwg" firstAttribute="trailing" secondItem="KJ1-GZ-KvV" secondAttribute="trailing" id="3Aj-14-tQX"/>
+                            <constraint firstItem="FWe-Os-Vwg" firstAttribute="leading" secondItem="KJ1-GZ-KvV" secondAttribute="leading" id="7pk-Lp-inn"/>
                             <constraint firstItem="dOc-6O-VsM" firstAttribute="top" secondItem="KJ1-GZ-KvV" secondAttribute="top" constant="10" id="Eob-Y2-Kkn"/>
                             <constraint firstItem="KJ1-GZ-KvV" firstAttribute="trailing" secondItem="W8T-Lq-e8b" secondAttribute="trailing" id="FsM-Cg-Vhm"/>
                             <constraint firstItem="Iob-TS-gtL" firstAttribute="bottom" secondItem="mXk-At-R5Q" secondAttribute="top" constant="-12" id="HyC-P7-dF3"/>
                             <constraint firstItem="dOc-6O-VsM" firstAttribute="leading" secondItem="KJ1-GZ-KvV" secondAttribute="leading" constant="10" id="N2m-wQ-fqg"/>
-                            <constraint firstItem="FWe-Os-Vwg" firstAttribute="top" secondItem="qdX-Xj-456" secondAttribute="top" id="O7I-9l-3ye"/>
                             <constraint firstItem="mXk-At-R5Q" firstAttribute="right" secondItem="KJ1-GZ-KvV" secondAttribute="right" constant="-10" id="Syj-8X-6jE"/>
-                            <constraint firstItem="FWe-Os-Vwg" firstAttribute="trailing" secondItem="KJ1-GZ-KvV" secondAttribute="trailing" id="avA-mK-KDW"/>
-                            <constraint firstItem="FWe-Os-Vwg" firstAttribute="bottom" secondItem="KJ1-GZ-KvV" secondAttribute="bottom" id="erw-Cn-lva"/>
                             <constraint firstItem="mXk-At-R5Q" firstAttribute="bottom" secondItem="1UI-hL-SXh" secondAttribute="top" constant="-12" id="gFE-tE-KD2"/>
                             <constraint firstItem="Iob-TS-gtL" firstAttribute="right" secondItem="KJ1-GZ-KvV" secondAttribute="right" constant="-10" id="hdq-zy-PzN"/>
                             <constraint firstItem="KJ1-GZ-KvV" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dOc-6O-VsM" secondAttribute="trailing" symbolic="YES" id="ltD-7X-zbk"/>
-                            <constraint firstItem="FWe-Os-Vwg" firstAttribute="leading" secondItem="KJ1-GZ-KvV" secondAttribute="leading" id="mpH-uI-WgJ"/>
                             <constraint firstItem="KJ1-GZ-KvV" firstAttribute="right" secondItem="1UI-hL-SXh" secondAttribute="right" constant="10" id="nMu-Wd-Cah"/>
+                            <constraint firstItem="FWe-Os-Vwg" firstAttribute="top" secondItem="KJ1-GZ-KvV" secondAttribute="top" id="rab-HR-cei"/>
                             <constraint firstItem="W8T-Lq-e8b" firstAttribute="leading" secondItem="KJ1-GZ-KvV" secondAttribute="leading" id="szE-ie-RXa"/>
                             <constraint firstItem="dOc-6O-VsM" firstAttribute="top" secondItem="W8T-Lq-e8b" secondAttribute="bottom" constant="8" id="vgb-bQ-bFC"/>
+                            <constraint firstItem="FWe-Os-Vwg" firstAttribute="bottom" secondItem="KJ1-GZ-KvV" secondAttribute="bottom" id="vjO-ue-1Fa"/>
                             <constraint firstItem="W8T-Lq-e8b" firstAttribute="top" secondItem="KJ1-GZ-KvV" secondAttribute="top" id="wuG-1x-k6e"/>
                             <constraint firstItem="KJ1-GZ-KvV" firstAttribute="bottom" secondItem="1UI-hL-SXh" secondAttribute="bottom" constant="50" id="wux-nE-BRx"/>
                         </constraints>
@@ -94,6 +96,7 @@ http://api.um.warszawa.pl</string>
                         <outlet property="timeIndycatorRight" destination="FsM-Cg-Vhm" id="mUQ-D3-bzy"/>
                         <outlet property="timeIndycatorView" destination="W8T-Lq-e8b" id="iQx-PN-OBf"/>
                         <outlet property="userSettingsButton" destination="mXk-At-R5Q" id="pLt-ZE-99N"/>
+                        <segue destination="ys3-Wv-ume" kind="presentation" identifier="ShowWebAPIForm" id="aHu-Gl-GDO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ybd-8B-oxo" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -103,7 +106,7 @@ http://api.um.warszawa.pl</string>
         <!--Ustawienia-->
         <scene sceneID="x0w-fW-Yss">
             <objects>
-                <tableViewController title="Ustawienia" id="vJe-ia-FV0" customClass="SettingsVC" customModule="CoJezdzi" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="SettingsScene" title="Ustawienia" id="vJe-ia-FV0" customClass="SettingsVC" customModule="CoJezdzi" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="xHu-5D-RGK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -221,6 +224,10 @@ http://api.um.warszawa.pl</string>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="oN4-1b-1B2" kind="show" identifier="SettingsFilterLines" id="zFn-Dj-JaT"/>
+                        <segue destination="ys3-Wv-ume" kind="show" identifier="AboutApplication" id="m6l-cO-Ehv"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RpU-B6-fSV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -318,7 +325,7 @@ http://api.um.warszawa.pl</string>
         <!--Navigation Controller-->
         <scene sceneID="Nkl-sQ-478">
             <objects>
-                <navigationController storyboardIdentifier="SettingsScene" automaticallyAdjustsScrollViewInsets="NO" id="0dN-YF-zbQ" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0dN-YF-zbQ" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Le9-RO-sNU">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -339,4 +346,7 @@ http://api.um.warszawa.pl</string>
         <image name="RefreshData" width="42" height="42"/>
         <image name="UserSettings" width="42" height="42"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="aHu-Gl-GDO"/>
+    </inferredMetricsTieBreakers>
 </document>
