--- a/CoJezdzi/CoJezdzi/Base.lproj/Main.storyboard
+++ b/CoJezdzi/CoJezdzi/Base.lproj/Main.storyboard
@@ -301,7 +301,7 @@ http://api.um.warszawa.pl</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Al3-14-fey" userLabel="spacer">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
@@ -347,6 +347,6 @@ http://api.um.warszawa.pl</string>
         <image name="UserSettings" width="42" height="42"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="aHu-Gl-GDO"/>
+        <segue reference="m6l-cO-Ehv"/>
     </inferredMetricsTieBreakers>
 </document>
