--- a/CoJezdzi/CoJezdzi/Base.lproj/Main.storyboard
+++ b/CoJezdzi/CoJezdzi/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@ http://api.um.warszawa.pl</string>
                             <constraint firstItem="FWe-Os-Vwg" firstAttribute="top" secondItem="qdX-Xj-456" secondAttribute="top" id="rab-HR-cei"/>
                             <constraint firstItem="W8T-Lq-e8b" firstAttribute="leading" secondItem="KJ1-GZ-KvV" secondAttribute="leading" id="szE-ie-RXa"/>
                             <constraint firstItem="dOc-6O-VsM" firstAttribute="top" secondItem="W8T-Lq-e8b" secondAttribute="bottom" constant="8" id="vgb-bQ-bFC"/>
-                            <constraint firstItem="FWe-Os-Vwg" firstAttribute="bottom" secondItem="KJ1-GZ-KvV" secondAttribute="bottom" id="vjO-ue-1Fa"/>
+                            <constraint firstItem="FWe-Os-Vwg" firstAttribute="bottom" secondItem="qdX-Xj-456" secondAttribute="bottom" id="vjO-ue-1Fa"/>
                             <constraint firstItem="W8T-Lq-e8b" firstAttribute="top" secondItem="KJ1-GZ-KvV" secondAttribute="top" id="wuG-1x-k6e"/>
                             <constraint firstItem="KJ1-GZ-KvV" firstAttribute="bottom" secondItem="1UI-hL-SXh" secondAttribute="bottom" constant="50" id="wux-nE-BRx"/>
                         </constraints>
@@ -301,7 +301,7 @@ http://api.um.warszawa.pl</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Al3-14-fey" userLabel="spacer">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
@@ -347,6 +347,6 @@ http://api.um.warszawa.pl</string>
         <image name="UserSettings" width="42" height="42"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="m6l-cO-Ehv"/>
+        <segue reference="aHu-Gl-GDO"/>
     </inferredMetricsTieBreakers>
 </document>
