Fixes missing constraints.

--- a/CoJezdzi/CoJezdzi/Base.lproj/Main.storyboard
+++ b/CoJezdzi/CoJezdzi/Base.lproj/Main.storyboard
@@ -307,10 +307,10 @@ http://api.um.warszawa.pl</string>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="oDU-gO-buD" firstAttribute="bottom" secondItem="Al3-14-fey" secondAttribute="bottom" id="B1g-bG-5Bp"/>
-                            <constraint firstItem="Al3-14-fey" firstAttribute="top" secondItem="oDU-gO-buD" secondAttribute="top" id="qj5-1B-Hyv"/>
-                            <constraint firstItem="oDU-gO-buD" firstAttribute="trailing" secondItem="Al3-14-fey" secondAttribute="trailing" id="vV4-Ea-LoB"/>
-                            <constraint firstItem="Al3-14-fey" firstAttribute="leading" secondItem="oDU-gO-buD" secondAttribute="leading" id="zTS-Dm-pPg"/>
+                            <constraint firstItem="Al3-14-fey" firstAttribute="bottom" secondItem="WxG-hA-Rd4" secondAttribute="bottom" id="B1g-bG-5Bp"/>
+                            <constraint firstItem="Al3-14-fey" firstAttribute="top" secondItem="WxG-hA-Rd4" secondAttribute="top" constant="20" id="qj5-1B-Hyv"/>
+                            <constraint firstItem="Al3-14-fey" firstAttribute="trailing" secondItem="WxG-hA-Rd4" secondAttribute="trailing" id="vV4-Ea-LoB"/>
+                            <constraint firstItem="Al3-14-fey" firstAttribute="leading" secondItem="WxG-hA-Rd4" secondAttribute="leading" id="zTS-Dm-pPg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="oDU-gO-buD"/>
                     </view>
