--- a/CoJezdzi/CoJezdzi/Base.lproj/Main.storyboard
+++ b/CoJezdzi/CoJezdzi/Base.lproj/Main.storyboard
@@ -272,7 +272,7 @@ http://api.um.warszawa.pl</string>
         <!--O Aplikacji-->
         <scene sceneID="O3a-TK-Ajx">
             <objects>
-                <viewController title="O Aplikacji" id="ys3-Wv-ume" customClass="WebScene" customModule="CoJezdzi" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AboutApp" title="O Aplikacji" id="ys3-Wv-ume" customClass="WebScene" customModule="CoJezdzi" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WxG-hA-Rd4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
